@@ -2,6 +2,7 @@
   - Support for directory level fallback scripts (fallback.groovy)
   - Groovy Console binding:
    - Added tree activation method doTreeActivateContainingPage()
+   - Added resource (de)activation actions doActivateResource()/doDeactivateResource()
 
 2019-01-31 1.8.1
   - Groovy Console binding:
